--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Run.@r.applescript (⌘r)
     The file is assosiated with "Run.d/" + the file extension +".applescript"
 
 Hello.^@l.applescript (^⌘l)
-    Load a 'Hello World' template
+    Load a 'Hello World' template based on the edited file extension
     The file is assosiated with "Hello.d/hello." + the file extension
 
 Open Finder.^@o.applescript (^⌘o)
