--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Run.@r.applescript (ctrl + command + r)
     Run script associated with the file extension
     The file is assosiated with "Run.d/" + the file extension +".applescript"
 
-Hello.^@l.applescript (ctrl + command + r)
+Hello.^@l.applescript (ctrl + command + l)
     ファイルの拡張子に基づいてテンプレートをロードします．
     テンプレートは"Hello.d"ディレクトリに置いておきます．
     Load a 'Hello World' template based on the file extension
