--- a/README
+++ b/README
@@ -26,3 +26,8 @@ Predefined entity reference.py
     選択範囲の実体参照を置換します．
     Replace the special characters in the selection (requires chmod 755)
 
+Artistic Style.sh
+    選択範囲のC, C++, C#, Javaのソースを整形します．
+    Format the C, C++, C#, Java code in the selection (requires chmod 755)
+    Rewrite the script if "astyle" is not located in "/usr/local/bin/"
+
